// Copyright 2016 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package gapic.examples;

import "google/protobuf/timestamp.proto";

message Request {
  string name = 1;
  User user = 2;
}

message User {
  enum UserType {
    UNSPECIFIED = 0;
    ADMINISTRATOR = 1;
  }
  string name = 1;
  UserType type = 2;
  repeated Post posts = 3;
  map<string, string> map_field = 4;
  bytes bytes_field = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message Post {
  string text = 1;
}

message GoodPagedRequest {
  string name = 1;
  int32 page_size = 2;
  string page_token = 3;
}
message Int64PagedRequest {
  string name = 1;
  int64 page_size = 2;
  string page_token = 3;
}
message MissingPageTokenRequest {
  string name = 1;
  int32 page_size = 2;
}
message MissingPageSizeRequest {
  string name = 1;
  string page_token = 3;
}

message GoodPagedResponse {
  repeated User users = 1;
  string next_page_token = 2;
}
message MissingRepeatedResponse {
  User user = 1;
  string next_page_token = 2;
}
message MissingMessageResponse {
  repeated string names = 1;
  string next_page_token = 2;
}
message MissingNextPageTokenResponse {
  repeated User users = 1;
}
message BadMessageOrderResponse {
  repeated Post posts = 2;
  repeated User users = 1;
  string next_page_token = 3;
}

//
message UsersScopedInfo {
  // [Output Only] A list of addresses contained in this scope.
  string scoped_info = 1;

  // [Output Only] Informational warning which replaces the list of addresses when the list is empty.
  string warning = 2;
}

message GoodMappedPagedResponse {
  // A list of AddressesScopedList resources.
  map<string, UsersScopedInfo> items = 1;

  // [Output Only] This token allows you to get the next page of results for list requests. If the number of results is larger than maxResults, use the nextPageToken as a value for the query parameter pageToken in the next list request. Subsequent list requests will have their own nextPageToken to continue paging through the results.
  string next_page_token = 3;
}
